Initial Vertx server implementation with basic reactive data access